--- a/Greeneries-backend/.env
+++ b/Greeneries-backend/.env
@@ -1,3 +1,17 @@
+PORT=8000
+MONGODB_URI=mongodb+srv://hitesh:your-password@cluster0.lxl3fsq.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=chai-aur-code
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chai-aur-backend
+REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+//
+
 PORT=4000
 Mongo_Db__url=mongodb://localhost:27017
 SECRET_KEY=gavghsvdgvahvdhsavhvbhjdfsbhsb
@@ -12,3 +26,5 @@ Mongodb_UserName= ehteshamscience
 Mongodb_Password = GNTtTxfXZlbM6opp
 Monfodb_url = mongodb+srv://ehteshamscience:GNTtTxfXZlbM6opp@blossyleaf.yfklye4.mongodb.net/?retryWrites=true&w=majority
 Mongo_compas=mongodb+srv://ehteshamscience:GNTtTxfXZlbM6opp@blossyleaf.yfklye4.mongodb.net/
+
+
